--- a/ShotEmUp.CSharp.csproj
+++ b/ShotEmUp.CSharp.csproj
@@ -77,9 +77,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\AsteroidMovement.cs" />
     <Compile Include="Assets\Scripts\AutoDestruct.cs" />
+    <Compile Include="Assets\Scripts\BlackWarshipController.cs" />
     <Compile Include="Assets\Scripts\BoundaryController.cs" />
     <Compile Include="Assets\Scripts\DestroyController.cs" />
-    <Compile Include="Assets\Scripts\EnemyController.cs" />
+    <Compile Include="Assets\Scripts\FollowMovement.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\InconstantMovement.cs" />
     <Compile Include="Assets\Scripts\LinearMovement.cs" />
