--- a/ShotEmUp.CSharp.csproj
+++ b/ShotEmUp.CSharp.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Scripts\DestroyController.cs" />
     <Compile Include="Assets\Scripts\FollowMovement.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\GreyWarshipController.cs" />
     <Compile Include="Assets\Scripts\InconstantMovement.cs" />
     <Compile Include="Assets\Scripts\LinearMovement.cs" />
     <Compile Include="Assets\Scripts\OndulantMovement.cs" />
