--- a/ShotEmUp.csproj
+++ b/ShotEmUp.csproj
@@ -124,14 +124,14 @@
     <Reference Include="Emgu.Util">
       <HintPath>Assets\HMC_x64\Emgu.Util.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers">
+      <HintPath>Assets\HMC_x64\Microsoft.VisualStudio.DebuggerVisualizers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing">
       <HintPath>Assets\HMC_x64\System.Drawing.dll</HintPath>
     </Reference>
     <Reference Include="ZedGraph">
       <HintPath>Assets\HMC_x64\ZedGraph.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers">
-      <HintPath>Assets\HMC_x64\Microsoft.VisualStudio.DebuggerVisualizers.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -152,6 +152,7 @@
     <Compile Include="Assets\Scripts\MainMenuCanvas.cs" />
     <Compile Include="Assets\Scripts\MeanderingMovement.cs" />
     <Compile Include="Assets\Scripts\OndulantMovement.cs" />
+    <Compile Include="Assets\Scripts\OptionMenuCanvas.cs" />
     <Compile Include="Assets\Scripts\OrbitantMovement.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ShotController.cs" />
